<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".ui.CredentialsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="32dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/set_up_your_credentials"
            android:textColor="@color/primaryText"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/key"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/key"
            android:textColor="@color/primaryText"/>

        <EditText
            android:id="@+id/secret"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/secret"
            android:textColor="@color/primaryText"/>

        <EditText
            android:id="@+id/edit_text_pin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/pin_4_digits"
            android:inputType="numberPassword"
            android:lines="1"
            android:maxLength="4"
            android:textColor="@color/primaryText"/>

        <Button
            android:id="@+id/setup"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/set_up"/>

    </LinearLayout>

</ScrollView>